# google_code_jam

./: 2018_qualification_round.py  go_go_gopher.py  saving_the_universe_again.py
2008_QR_ugh/: CMakeLists.txt  debug_input.txt  debug_input_tt.txt  fly_swatter.cpp  saving_the_universe.cpp  train_timetable.cpp
2008_Round1A/: CMakeLists.txt  milkshakes.cpp  min_scal_prod.cpp
2009_QR/: CMakeLists.txt  alien_language.cpp  debug_ws.txt  watersheds.cpp  welcome_to_code_jam.cpp
2010_QR/: CMakeLists.txt  fair_warning.py
2016_qualification_round/: counting_sheep.py  revenge_of_the_pancakes.py
2017_qualification_round/: oversized_pancake_flipper.py  q1.py  q2.py  q3.py  q4.py
2018_qualification_round/: cubic_ufo.py  manim_example.py  trouble_sort.py
2019_qualification_round/: cryptoanagrams.py  foregone_solution.py  you_can_go_your_own_way.py
2021_round_1/: data1.txt  data2.txt  q1.py  q2.py  test.py
2021_round_1B/: CMakeLists.txt  data1.txt  data1_2.txt  data2.txt  data2_2.txt  q1.py  q1_sol2.py  q2.cpp  q2.py
2021_round_1C/: data1.txt  data2.txt  q1.py  q2.py
2022_qualification_round/: 3d_printing.py  3d_printing_test_case.txt  chain_reactions.py  chain_reactions_2.py  d1000.py  punched_cards.py  py
2022_round1A/: data3.txt  do_prob.py  q1.py  q2.py  q3.py
2022_round1B/: data1.txt  data2.txt  q1.py  q2.py
boilerplate/: non_interactive.py
sidetrack/: CMakeLists.txt  sidetrack1.cpp
test/: expectation.py  fizzbuzz.py
