cmake_minimum_required(VERSION 3.11.0)
project(2009_QR)

set(CXX_STANDARD 17)
set(CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# set(NAME1 fair_warning)
# set(NAME2 watersheds)
# set(NAME3 welcome_to_code_jam)

# add_executable(${NAME1} ${NAME1}.cpp)
# add_executable(${NAME2} ${NAME2}.cpp)
# add_executable(${NAME3} ${NAME3}.cpp)